# octoweave

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  demo_union_hierarchy.py  flake.nix
.github/workflows/: ci.yml  docs.yml  release.yml  wheels.yml
cmake/: FindCatch2.cmake
docs/: README-nix.md  build.rst  c_api.rst  changelog.rst  cli.rst  conf.py  contributing.rst  cpp_api.rst  design.rst  examples.rst  faq.rst  index.rst  install.rst  integration.rst  overview.rst  policies.rst  python_api.rst  roadmap.rst  troubleshooting.rst  viz.rst
examples/: 01_synthetic_hierarchy.cpp  02_forest_policies.cpp  03_viz_export.cpp  04_csv_to_forest.cpp  05_parallel_chunks.cpp
include/octoweave/: c_api.h  chunk_grid.hpp  hierarchy.hpp  octo_iface.hpp  p4est_builder.hpp  p8est_builder.hpp  parallel.hpp  union.hpp  viz.hpp
prompts/: kickoff.txt
python/: .gitignore  README.md  pyproject.toml
python/examples/: mpl_viz_demo.py  mvn_viz_demo.py  parquet_pipeline_demo.py  render_csv.py  run_pipeline_demo.py
python/octoweave_py/: __init__.py  _ctypes.py  cli.py  viz.py  viz_cli.py
python/tests/: test_vizpy.py
src/: c_api.cpp
src/chunk/: chunk_grid.cpp
src/hierarchy/: hierarchy.cpp
src/octo/: octo_iface_octomap.cpp  octo_iface_stub.cpp  octomap_probe.cpp
src/p4est/: p4est_builder_real.cpp  p4est_builder_stub.cpp  p4est_probe.cpp
src/p8est/: p8est_builder_real.cpp  p8est_builder_stub.cpp  p8est_probe.cpp
src/parallel/: parallel.cpp
src/union/: prob_union.cpp
src/utils/: logging.cpp
src/viz/: viz_impl.cpp  viz_main.cpp
tests/unit/: test_chunk_grid.cpp  test_end_to_end.cpp  test_hierarchy.cpp  test_octo_iface.cpp  test_p4est_mapping.cpp  test_p8est_mapping.cpp  test_parallel.cpp  test_prob_union.cpp  test_viz.cpp
